# officebench

./: CMakeLists.txt  License.txt  README.md  header.h  helpwidget.cxx  helpwidget.h  homewidget.cxx  homewidget.h  main.cxx  mainwindow.cxx  mainwindow.h  officebenchmark_data.h  officebenchmark_definition.h  prepareforbenchmarkbutton.cxx  prepareforbenchmarkbutton.h  resultloadingwidget.cxx  resultloadingwidget.h  resultwidget.cxx  resultwidget.h  tabwidget.cxx  tabwidget.h  teststatuswidget.cxx  teststatuswidget.h  treemodel.cpp
benchmark/: CMakeLists.txt  benchmark.cxx  benchmark.h  benchoffice.cxx  calccontrol.cxx  generalcontrol.cxx  impresscontrol.cxx  officecontrol.cxx  officecontrol.h  writercontrol.cxx
dependencyLibs/: install.sh
